syntax = "proto3";
package userGrpc;
option go_package = "user/application/service/user";

message RegisterRequest{
  string username = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResponse {
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string token = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string token = 3;
}

message LoginResponse{
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  TokenRequest token = 4;
}

message TokenRequest{
  string accessToken = 1;
  string refreshToken = 2;
  string tokenType = 3;
  int64 accessTokenExp = 4;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse){}
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc TokenAuth(LoginRequest) returns (LoginResponse) {}
}